; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/extr_update.c_test_refs_update__updating_the_target_of_a_symref_with_an_invalid_name_returns_EINVALIDSPEC.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/extr_update.c_test_refs_update__updating_the_target_of_a_symref_with_an_invalid_name_returns_EINVALIDSPEC.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_repo = common dso_local global i32 0, align 4
@GIT_HEAD_FILE = common dso_local global i32 0, align 4
@GIT_REFERENCE_SYMBOLIC = common dso_local global i32 0, align 4
@GIT_EINVALIDSPEC = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"refs/heads/inv@{id\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_refs_update__updating_the_target_of_a_symref_with_an_invalid_name_returns_EINVALIDSPEC() #0 {
  %1 = alloca i32*, align 8
  %2 = load i32, i32* @g_repo, align 4
  %3 = load i32, i32* @GIT_HEAD_FILE, align 4
  %4 = call i32 @git_reference_lookup(i32** %1, i32 %2, i32 %3)
  %5 = call i32 @cl_git_pass(i32 %4)
  %6 = load i32, i32* @GIT_REFERENCE_SYMBOLIC, align 4
  %7 = load i32*, i32** %1, align 8
  %8 = call i32 @git_reference_type(i32* %7)
  %9 = call i32 @cl_assert_equal_i(i32 %6, i32 %8)
  %10 = load i32*, i32** %1, align 8
  %11 = call i32 @git_reference_free(i32* %10)
  %12 = load i32, i32* @GIT_EINVALIDSPEC, align 4
  %13 = load i32, i32* @g_repo, align 4
  %14 = load i32, i32* @GIT_HEAD_FILE, align 4
  %15 = call i32 @git_reference_symbolic_create(i32** %1, i32 %13, i32 %14, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32 1, i32* null)
  %16 = call i32 @cl_assert_equal_i(i32 %12, i32 %15)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_reference_lookup(i32**, i32, i32) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_reference_type(i32*) #1

declare dso_local i32 @git_reference_free(i32*) #1

declare dso_local i32 @git_reference_symbolic_create(i32**, i32, i32, i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
